# pyApp

./: .travis.yml  Pipfile  README.md  run.py  setup.cfg
.github/workflows/: codacy-analysis.yml  codeql-analysis.yml
docs/: setup.md
pyapp/: __init__.py  pyapp.py
tests/: __init__.py  conftest.py  test_pyapp.py
