[metadata]
name = pyapp
version = attr: pyapp.__version__

author = Fernando Ribeiro
author_email = fribeiro@fribeiro.org
description = This package makes wonderful things happen.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/fa-ribeiro/pyapp
project_urls =
    Bug Tracker = https://github.com/fa-ribeiro/pyapp/issues
platforms = any
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Typing :: Typed

[options]
packages = find:
python_requires = >=3.6
